--- a/Frontend/src/Components/Packages/packages.css
+++ b/Frontend/src/Components/Packages/packages.css
@@ -1,4 +1,4 @@
-/* packages.css */
+/* packages.css
 
 body {
     font-family: Arial, sans-serif;
@@ -114,4 +114,4 @@ body {
     text-align: center;
     margin-top: 20px;
   }
-  
+   */
